finalized color scheme. Added styling for the create account button. Slightly altered gap on the form inputs to fix an issue with labels not lining up right.

--- a/style.css
+++ b/style.css
@@ -3,10 +3,19 @@
     font-size: 62.5%;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a > strong {
+    font-size: 2rem;
+}
+
 body {
     display: flex;
     flex: 1;
-    
+    font-family: 'josefin sans', sans-serif;
 }
 
 .background {
@@ -28,24 +37,62 @@ body {
     background: #9fd3c7;
 }
 
+.container section {
+    height: 30%;
+}
+
+.feature {
+    padding-left: 1.2rem;
+}
 
 form {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
-    height: 33%;
-    flex: 2 1; 
+    justify-content: flex-start;
+    height: 50%;
     flex-wrap: wrap;
-    padding: 2rem;
-    gap: 1rem;
+    gap: 0.7rem 1rem;
+    
 }
 
-.feature {
+.container .feature {
     box-shadow: 5px 5px 10px #4E6171;
     background: #677C8F;
+    height: 40%;
+    
 }
 
+.info {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.2rem;
+    
+}
+
+.info > p {
+    font-size: 2.4rem;
+}
+
+.padded {
+    padding-bottom: 1rem;
+}
+
+.fake-btn {
+    padding: 2rem;
+    margin: 1.5rem;
+    background: #f76b8a;
+    border: 1px solid #f76b8a;
+    border-radius: 8%;
+    width: 15%;
+    height: 20%;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.fake-btn:hover {
+    border: 1px solid #677C8F;
+}
 .overlay {
     z-index: 1;
     position: absolute;
